--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --ext .js,.ts,.jsx,.tsx"
   },
   "dependencies": {
     "next": "12.3.1",
@@ -19,6 +19,8 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "2.7.1",
     "typescript": "4.8.3"
   }
 }
