--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint --ext .js,.ts,.jsx,.tsx"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.6.1",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^13.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
@@ -22,7 +21,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.1.4",
     "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.16",
     "prettier": "2.7.1",
